@@ -39,13 +39,13 @@ $linkToID=$controller->sid;
 
 print_header($controller->getPageTitle());
 
-// LightBox
-if ($MULTI_MEDIA && file_exists('./modules/lightbox.php')) {
-	include './modules/lightbox/lb_defaultconfig.php';
+// If LightBox installed ---------------------------------
+if ($MULTI_MEDIA && file_exists('modules/lightbox.php')) {
+	include 'modules/lightbox/lb_defaultconfig.php';
 	if (file_exists('modules/lightbox/lb_config.php')) {
-		include './modules/lightbox/lb_config.php';
+		include 'modules/lightbox/lb_config.php';
 	}
-	include './modules/lightbox/functions/lb_call_js.php';
+	include 'modules/lightbox/functions/lb_call_js.php';
 	loadLangFile('lightbox:lang');
 }
 
