@@ -10,6 +10,7 @@
 
 
 Version 4.2.1
+ - Fixed [ 2567389 ] "Media Viewer using full GEDCOM Media URL"; Also "source.php error with Lightbox"; (windmillway)
  - Changed: Removed "Update Photo" option from Quick Update (canajun2eh)
  - Changed: Improved user interface in Manage Media (canajun2eh)
  - Fixed: [ 2580303 ] GoogleMap - Add place not working in FireFox (wooc)
